--- a/webserver/vue-frontend/package.json
+++ b/webserver/vue-frontend/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/p5": "^0.9.0",
     "core-js": "^3.6.4",
+    "p5": "^1.0.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
