--- a/webserver/package.json
+++ b/webserver/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "haikunator": "^2.1.2",
     "internal-ip": "^6.0.0",
     "request": "^2.88.0",
     "socket.io": "^2.3.0"
